Create User model and User role

--- a/system_gym/src/main/resources/application.yml
+++ b/system_gym/src/main/resources/application.yml
@@ -4,8 +4,11 @@ spring:
     username: ${USER}
     password: ${PASSWORD}
     driver-class-name: org.postgresql.Driver
-
   jpa:
     show-sql: true
     hibernate:
       ddl-auto: update
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+  flyway:
+    enabled: true
+    baseline-on-migrate: true
